# SorotokiCode

./: .gitignore  404.html  BezierEval.m  CITATION.cff  CosseratBase.fig  FEMbase.fig  Gemfile  LICENSE.md  LoadDistribution.asv  LoadDistribution.m  Makefile  PODbase.fig  README.md  SDF.m  SDF.m~  Softarm.fig  Untitled2.m  Untitled5.asv  Untitled5.m  _config.yml  _paper.md  axis.eps  bla.txt  config.m  data.xlsx  date.mat  dzhanibekov.stl  fem_KJ_model.m  fem_SWR.m  fem_pneunet_dyn.m  index.html  index.md  matlab.mat  mkdocs.yml  myfigure.tikz  paper.bib  paper.md  patch.md  plotPlane.m  readme.txt  (+20 more)
_site/: test.m  (+5 more)
src/model/tools/solver/: CMakeLists.txt  config.txt  main.cpp  plot.py
src/model/tools/solver/_setup/: config.m
src/model/tools/solver/_setup/log/: endeffector.txt  hamiltonian.txt  setpoint.txt
src/model/tools/solver/bla/: CMakeCache.txt  Makefile  cmake_install.cmake  solver
src/model/tools/solver/build_continious/: CMakeCache.txt  Makefile  cmake_install.cmake  config.m  solver
src/model/tools/solver/build_continious/log/: endeffector.txt  endeffector_Acc.txt  endeffector_Vel.txt  estimate.txt  grav_vector.txt  hamiltonian.txt  setpoint.txt  splineXd.txt  state.txt
src/model/tools/solver/build_discontinious/: CMakeCache.txt  Makefile  cmake_install.cmake  config.m  solver
src/model/tools/solver/build_discontinious/log/: endeffector.txt  endeffector_Acc.txt  endeffector_Vel.txt  estimate.txt  grav_vector.txt  hamiltonian.txt  setpoint.txt  splineXd.txt  state.txt
src/model/tools/solver/src/: AutoDiffJacobian.h  AutoDiffScalar.h  CARE.cpp  CARE.h  Cosserat.cpp  Cosserat.h  DEBUGGER.h  HamiltonianFunc.cpp  HamiltonianFunc.h  LieAlgebra.h  Logger.h  Model.cpp  Model.h  Model_ph.cpp  Model_ph.h  PortController.cpp  PortController.h  PortHamiltonian.cpp  PortHamiltonian.h  PropertyTensor.h  ShapesX.cpp  ShapesX.h  Spline.h  TicToc.h  _main.cpp  delta.h  differentiation.html  eigen-qp.hpp  lieAlgebra.h  liegroup.h  pinv.cpp  pinv.h  pthres.hpp  qprog.hpp  readFile.cpp  readFile.h  shapes.cpp  shapes.h  shapesx.cpp  shapesx.h  (+4 more)
src/model/tools/solver/src/Config/: Chameleon.h  ConfigFile.h
(+1859 files in other folders)
